--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+  height: 100vh;
+}
+
 h2 {
   display: flex;
   align-items: center;
@@ -76,7 +80,7 @@ img {
 .footer {
   display: flex;
   flex-direction: column;
-  height: 50%;
+  height: 100%;
 }
 
 div.container-fluid {
