--- a/blog.css
+++ b/blog.css
@@ -1,7 +1,7 @@
 body {
   background-image: url('imgs/notebook.jpg');
 
-  height: 100%;
+  height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -9,6 +9,11 @@ body {
 
 .container-fluid {
   margin: 20px;
+}
+
+.row {
+  display: flex;
+  flex-direction: column;
 }
 
 a, .entries {
