--- a/photoGallery.css
+++ b/photoGallery.css
@@ -40,3 +40,15 @@ h2 {
 #title {
   margin-left: 25%;
 }
+
+@keyframes color-change {
+    0% { color: red; }
+    25% { color: blue; }
+    50% { color: red; }
+    75% { color:green; }
+    100% { color: yellow; }
+}
+
+.color-changing-text {
+    animation: color-change 4s infinite alternate; /* 4s duration, infinite loop, alternates direction */
+}
