--- a/random.css
+++ b/random.css
@@ -12,17 +12,6 @@ body {
   margin-bottom: 10px;
 }
 
-#linkedin, #github, #google {
-  max-width: 20%;
-  height: auto;
-}
-
-#musicButton{
-  max-width: 30%;
-  height: auto;
-  margin-top: 15px;
-}
-
 h1, span {
   font-family: 'fantasy', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-weight: bold;
@@ -43,25 +32,7 @@ h5, h6 {
   font-weight: 1;
 }
 
-.lang {
-  max-width: 20%;
-  height: auto;
-}
-
-.lang:hover {
-  cursor: grab;
-}
-
-#menav {
-  max-width: 40%;
-  max-height: 60%;
-  border-radius: 100%;
-  border: 1px solid rgb(185, 185, 185);
-  background-color: aliceblue;
-  padding: 5px;
-}
-
-#cardBorder, #me, #projectPhoto, #projects {
+#cardBorder {
   border: 2px dashed rgb(0, 0, 0);
   padding: 3px;
 }
@@ -70,10 +41,6 @@ h5, h6 {
   border: 1px solid rgb(0, 0, 0);
   padding: 5px;
   background-color:violet;
-}
-
-#projects {
-  word-wrap: break-word;
 }
 
 #masterForm {
@@ -85,18 +52,38 @@ h5, h6 {
   background-color: aliceblue;
 }
 
+.type {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 250px;
+  width: 250px;
+  height: 200px;
+  background-color: red;
+  position: relative;
+  animation: example 2s infinite alternate;
+}
+
 .raaandom {
   display: flex;
   justify-content: flex-end;
-  margin-top: 200px;
-
+  margin-top: 100px;
   width: 100px;
   height: 100px;
   background-color: red;
   position: relative;
-  animation-name: example;
-  animation-duration: 4s;
+  animation: example 4s infinite alternate;
 
+}
+
+#color-changing-text {
+    animation: color-change 1s infinite alternate;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @keyframes example {
@@ -105,4 +92,12 @@ h5, h6 {
   50%  {background-color:blue; left:200px; top:200px;}
   75%  {background-color:green; left:0px; top:200px;}
   100% {background-color:red; left:0px; top:0px;}
+}
+
+@keyframes color-change {
+    0% { color: red; }
+    25% { color: blue; }
+    50% { color: red; }
+    75% { color:green; }
+    100% { color: yellow; }
 }
