--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,11 @@ div.verticalLineRight {
   height: auto;
 }
 
+#music {
+  width:80px;
+  height: auto;
+}
+
 #insta {
   max-width: 80px;
   height: auto;
